<resources>
    <string name="app_name">MyFavLocation</string>
    <string name="title_home">Home</string>
    <string name="addLocation_title">Create new Location</string>
    <string name="favorite">Favorite</string>
    <string name="content_description_favorite">Favorite Description</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="chooseCategory">Choose Category</string>
    <string name="description">Description</string>
    <string name="rating">Rating:</string>
    <string name="image_description">Photo taken of the location</string>
    <string name="map_description">Static map of the current location</string>
    <string name="locationDetail_title">Details</string>
    <string name="errorNoInput">Error: No input</string>
</resources>
